# woh_mod_creator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  commitlint.yml  format.yml  main.yml
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/core/: CMakeLists.txt  core_dummy.cpp  core_dummy.h
src/ito/: CMakeLists.txt  CmakeLists.txt  ItoDiagnostics.cpp  ItoDiagnostics.h  ItoDocument.cpp  ItoDocument.h  ItoParser.cpp  ItoParser.h  ItoWriter.cpp  ItoWriter.h  ito_dummy.cpp  ito_dummy.h
tests/: CMakeLists.txt  ito_diagnostics_tests.cpp  ito_document_tests.cpp  ito_io_tests.cpp  ito_parser_tests.cpp  test_smoke.cpp
